--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   <title>Lurien</title>
 </head>
 
-<body style="">
+<body style="owo">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
